refactorizar: organizar la estructura del proyecto en src/, data/, docs/, notebooks/, scripts/

--- a/notebooks/Model_based_collaborative_filtering.ipynb
+++ b/notebooks/Model_based_collaborative_filtering.ipynb
@@ -1127,7 +1127,9 @@
         "id": "th5-d8wFmD9r"
       },
       "source": [
-        "## Evaluando el modelo"
+        "## Evaluando el modelo\n",
+        "\n",
+        "Calificaciones reales dadas por los usuarios"
       ]
     },
     {
